--- a/index.html
+++ b/index.html
@@ -1,398 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FreeFlow — Voice Assistant</title>
-  <style>
-    /* ===========================
-       THEME & BASE
-       =========================== */
-    :root{
-      --txt:#e8eef8; --muted:#b8c3d1;
-      --panel: rgba(16,20,28,.68);
-      --line: rgba(255,255,255,.08);
-      --accent:#ff9c2f; --cyan:#18e0ff;
-      --bg:#0b0f14;
-      --stageTop: 76px;                 /* odsuwa logo od topbar */
-      --logoSize: min(78vw, 360px);     /* rozmiar kropli */
-      --transcriptGap: 92px;            /* odległość transkrypcji od dołu logo */
-    }
-    *{ box-sizing: border-box; -webkit-tap-highlight-color:transparent; }
-    html,body{ height:100%; margin:0; color:var(--txt); font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); overflow-x:hidden; }
-
-    /* ===========================
-       BACKGROUND
-       =========================== */
-    .bg{
-      position:fixed; inset:0; z-index:-2;
-      background: url("./Background.png") center/cover no-repeat fixed, var(--bg);
-    }
-    .bg::before{
-      content:""; position:absolute; inset:0;
-      background: radial-gradient(1200px 800px at 50% 18%, rgba(10,10,16,.14), rgba(10,10,16,.45));
-    }
-    .grain{
-      position:fixed; inset:0; z-index:-1; opacity:.03; pointer-events:none;
-      background-image: radial-gradient(currentColor 1px, transparent 1px);
-      background-size:3px 3px;
-    }
-
-    /* ===========================
-       TOPBAR
-       =========================== */
-    .topbar{
-      position:fixed; inset:0 0 auto 0; height:56px;
-      display:flex; align-items:center; justify-content:space-between;
-      padding:0 14px; z-index:10;
-      background:linear-gradient(180deg, rgba(6,8,12,.9), rgba(6,8,12,.4));
-      border-bottom:1px solid var(--line);
-      backdrop-filter: blur(6px);
-    }
-    .brand{ font-weight:800; letter-spacing:.14em; text-transform:uppercase; font-size:14px; }
-    .actions{ display:flex; gap:8px; }
-    .icon-btn{ height:36px; min-width:40px; padding:0 12px; border:1px solid var(--line);
-      border-radius:12px; background:rgba(255,255,255,.06); color:var(--txt); font-size:18px; cursor:pointer; }
-    .badge{ font-size:12px; background:var(--accent); color:#161616; padding:1px 6px; border-radius:999px; margin-left:6px; }
-
-    /* ===========================
-       HERO LOGO (DROP)
-       =========================== */
-    .stage{ padding-top:var(--stageTop); }
-    .logo-zone{
-      position:relative; margin:14px auto 0; width:var(--logoSize); height:var(--logoSize);
-      display:block; border:0; background:transparent; cursor:pointer; outline:none;
-      filter: drop-shadow(0 18px 38px rgba(0,0,0,.55));
-      border-radius: 42% 42% 50% 50% / 50% 50% 42% 42%;
-    }
-    .logo-img{ position:absolute; inset:0; width:100%; height:100%; object-fit:contain; display:block;
-      mix-blend-mode:screen; filter:saturate(1.06) contrast(1.06); transition:transform .25s ease, filter .25s ease; }
-    /* neon ring container */
-    .logo-neon{
-      position:absolute; inset:-6%; border-radius:40% 40% 56% 56% / 44% 44% 60% 60%;
-      pointer-events:none; opacity:0;
-    }
-    /* glow ON when recording/listening */
-    body.recording .logo-neon,
-    .logo-zone.listening .logo-neon{ opacity:1; animation:neonPulse 1.35s ease-in-out infinite; }
-    @keyframes neonPulse{
-      0%{
-        box-shadow:
-          0 0 12px 4px rgba(255,156,47,.58),
-          0 0 32px 10px rgba(255,156,47,.35),
-          0 0 54px 16px rgba(24,224,255,.2),
-          inset 0 0 10px rgba(255,156,47,.25);
-        transform:scale(1);
-        filter:saturate(1);
-      }
-      50%{
-        box-shadow:
-          0 0 18px 8px rgba(255,156,47,.75),
-          0 0 48px 18px rgba(255,156,47,.45),
-          0 0 84px 26px rgba(24,224,255,.30),
-          inset 0 0 18px rgba(255,156,47,.28);
-        transform:scale(1.03);
-        filter:saturate(1.15);
-      }
-      100%{
-        box-shadow:
-          0 0 12px 4px rgba(255,156,47,.58),
-          0 0 32px 10px rgba(255,156,47,.35),
-          0 0 54px 16px rgba(24,224,255,.2),
-          inset 0 0 10px rgba(255,156,47,.25);
-        transform:scale(1);
-        filter:saturate(1);
-      }
-    }
-    /* logo breathing */
-    body.recording .logo-img,
-    .logo-zone.listening .logo-img{ animation:imgBreathe 1.35s ease-in-out infinite; }
-    @keyframes imgBreathe{
-      0%,100%{ transform:scale(1); filter:saturate(1.05) contrast(1.06) brightness(1.02); }
-      50%    { transform:scale(1.01); filter:saturate(1.18) contrast(1.12) brightness(1.06); }
-    }
-
-    /* ===========================
-       TRANSCRIPT
-       =========================== */
-    .transcript{
-      width:min(92vw, 760px);
-      margin: calc(var(--logoSize) + var(--transcriptGap)) auto 0;
-      background: var(--panel); border:1px solid var(--line);
-      border-radius:16px; padding:12px 14px; box-shadow:0 10px 30px rgba(0,0,0,.35);
-      min-height:64px; max-height:38vh; overflow:auto; line-height:1.35;
-    }
-    .row{ display:flex; gap:8px; margin:4px 0; align-items:flex-start; }
-    .role{ min-width:86px; color:var(--muted); font-weight:700; font-size:13px; }
-    .text{ flex:1; font-size:14px; }
-
-    /* ===========================
-       BOTTOM QUICK ACTIONS
-       =========================== */
-    .bottom-bar{
-      position:fixed; left:50%; transform:translateX(-50%); bottom:16px; z-index:20;
-      display:flex; gap:12px; padding:6px; background:rgba(10,10,16,.35);
-      border:1px solid var(--line); border-radius:16px; backdrop-filter: blur(6px);
-    }
-    .pill{
-      display:flex; align-items:center; gap:8px; cursor:pointer;
-      border:1px solid var(--line); border-radius:14px;
-      padding:12px 16px; font-weight:700; background:rgba(255,255,255,.08); color:#fff;
-      box-shadow:0 8px 22px rgba(0,0,0,.35); font-size:16px;
-    }
-    .pill:active{ transform:translateY(1px); }
-
-    /* ===========================
-       STATUS DOT
-       =========================== */
-    .status-dot{
-      position:absolute; right: -10px; top:-10px; width:14px; height:14px; border-radius:50%;
-      border:2px solid rgba(0,0,0,.45); background:#2ecc71; box-shadow:0 0 8px rgba(0,0,0,.4);
-    }
-
-    /* ===========================
-       MEDIA
-       =========================== */
-    @media (max-width:420px){
-      :root{ --transcriptGap: 78px; }
-      .role{ min-width:72px; font-size:12px; }
-      .text{ font-size:13.5px; }
-      .pill{ padding:10px 12px; font-size:15px; }
-    }
-  </style>
+  <title>FREEFLOW</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="bg" aria-hidden="true"></div>
-  <div class="grain" aria-hidden="true"></div>
-
   <header class="topbar">
     <div class="brand">FREEFLOW</div>
     <div class="actions">
-      <button class="icon-btn" aria-label="Menu">☰</button>
-      <button class="icon-btn" aria-label="Koszyk">🛒<span class="badge" id="cartCount">0</span></button>
+      <button class="icon-btn" id="menuBtn" aria-label="Menu">☰</button>
+      <button class="icon-btn" id="cartBtn" aria-label="Koszyk">🛒<span id="cartCount">0</span></button>
     </div>
   </header>
 
-  <main class="stage" aria-live="polite">
-    <div class="logo-zone" id="logoBtn" role="button" tabindex="0" aria-label="Nagraj komunikat">
-      <img class="logo-img" src="./Freeflow-logo.png" alt="FreeFlow logo">
-      <div class="logo-neon"></div>
-      <div id="statusDot" class="status-dot"></div>
-    </div>
+  <main class="stage">
+    <!-- Neon pulsing drop with logo -->
+    <button id="micBtn" class="logo-wrap" aria-label="Nagraj komunikat">
+      <span class="neon-ring"></span>
+      <img class="logo" src="assets/logo.png" alt="FreeFlow logo" />
+    </button>
 
-    <section class="transcript" id="transcript"></section>
+    <!-- Status / transcript box -->
+    <section id="console" class="console" aria-live="polite"></section>
+
+    <!-- Quick intents -->
+    <nav class="actions-row">
+      <button class="pill" data-intent="Jedzenie">🍽️ Jedzenie</button>
+      <button class="pill" data-intent="Taxi">🚖 Taxi</button>
+      <button class="pill" data-intent="Hotel">🏨 Hotel</button>
+    </nav>
   </main>
 
-  <nav class="bottom-bar">
-    <button class="pill" id="btnFood">🍽️ Jedzenie</button>
-    <button class="pill" id="btnTaxi">🚕 Taxi</button>
-    <button class="pill" id="btnHotel">🏨 Hotel</button>
-  </nav>
-
-  <script>
-    /* ===========================
-       BACKEND ENDPOINTS
-       =========================== */
-    const BACKEND = 'https://freeflow-backend-vercel.vercel.app';
-    const URLS = {
-      health:    BACKEND + '/api/health',
-      asr:       BACKEND + '/api/asr',              // POST audio/webm
-      tts:       BACKEND + '/api/tts',              // POST {text}
-      assistant: BACKEND + '/api/assistant',        // POST {audioBase64,...}
-      chat:      BACKEND + '/api/assistant-text'    // POST {text}
-    };
-
-    /* ===========================
-       UI HELPERS
-       =========================== */
-    const el = {
-      logo: document.getElementById('logoBtn'),
-      dot: document.getElementById('statusDot'),
-      transcript: document.getElementById('transcript'),
-      pills: [document.getElementById('btnFood'), document.getElementById('btnTaxi'), document.getElementById('btnHotel')]
-    };
-
-    function line(role, text){
-      const row = document.createElement('div'); row.className='row';
-      const r = document.createElement('div'); r.className='role'; r.textContent = role + ':';
-      const t = document.createElement('div'); t.className='text'; t.textContent = text;
-      row.append(r,t); el.transcript.append(row); el.transcript.scrollTop = el.transcript.scrollHeight;
-    }
-    function setDot(color){ if(el.dot) el.dot.style.background = color; }
-    function setState(state){
-      // idle / listen / think / err
-      const colors = { idle:'#2ecc71', listen:'#f1c40f', think:'#3498db', err:'#e74c3c' };
-      document.body.classList.toggle('recording', state==='listen');
-      setDot(colors[state]||colors.idle);
-    }
-
-    /* ===========================
-       HEALTH CHECK
-       =========================== */
-    (async () => {
-      try{
-        const r = await fetch(URLS.health, { cache:'no-store' });
-        const j = await r.json().catch(()=>({}));
-        if(r.ok && j?.ok){ line('Asystent', 'Backend OK – ' + new Date(j.ts || Date.now()).toLocaleTimeString()); }
-        else { line('Asystent', 'Health niepełny – sprawdź Vercel.'); }
-      }catch{
-        line('Asystent', 'Nie mogę dotrzeć do /api/health – sprawdź domenę/CORS.');
-      }
-      line('Asystent', 'W celu złożenia zamówienia – proszę nacisnąć logo.');
-    })();
-
-    /* ===========================
-       TTS: browser → fallback server
-       =========================== */
-    async function speak(text){
-      // 1) Browser speechSynthesis (bez kosztów)
-      try{
-        if('speechSynthesis' in window){
-          const u = new SpeechSynthesisUtterance(text);
-          u.lang = 'pl-PL'; u.rate = 1.0; u.pitch = 1.0; u.volume = 1.0;
-          const pick = () => {
-            const vs = speechSynthesis.getVoices();
-            const v = vs.find(v => v.lang?.startsWith('pl') || /Polish|Polski/i.test(v.name));
-            if(v) u.voice = v;
-            speechSynthesis.speak(u);
-          };
-          if(speechSynthesis.getVoices().length) pick();
-          else speechSynthesis.onvoiceschanged = pick;
-          return;
-        }
-      }catch(e){ /* fallback niżej */ }
-
-      // 2) Server TTS
-      try{
-        const r = await fetch(URLS.tts, {
-          method:'POST', headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({ text })
-        });
-        if(!r.ok) throw new Error('TTS HTTP ' + r.status);
-        const blob = await r.blob();
-        const url = URL.createObjectURL(blob);
-        const audio = new Audio(url); audio.play();
-      }catch(e){
-        line('Asystent','[TTS niedostępny]');
-      }
-    }
-
-    /* ===========================
-       SPEECH RECOGNITION (browser)
-       + fallback: MediaRecorder → /api/asr
-       =========================== */
-    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    let recognizer = null, listening = false;
-    let media, recorder, chunks = [], recActive = false;
-
-    function startSR(){
-      if(!SR){ return false; }
-      if(listening) return true;
-      recognizer = new SR(); recognizer.lang = 'pl-PL';
-      recognizer.interimResults = true; recognizer.continuous = false;
-      let finalText = '';
-      listening = true; setState('listen');
-
-      recognizer.onresult = (e) => {
-        let interim=''; for(let i=e.resultIndex;i<e.results.length;i++){
-          const s = e.results[i][0].transcript;
-          if(e.results[i].isFinal) finalText += s + ' '; else interim += s;
-        }
-        const text = (finalText || interim).trim();
-        if(text) { // pokazuj live w transkrypcji
-          if(el.transcript.lastChild?.dataset?.live!=='1'){
-            const row = document.createElement('div'); row.className='row'; row.dataset.live='1';
-            const r = document.createElement('div'); r.className='role'; r.textContent='Ty:';
-            const t = document.createElement('div'); t.className='text'; t.id='liveText';
-            row.append(r,t); el.transcript.append(row);
-          }
-          document.getElementById('liveText').textContent = text;
-          el.transcript.scrollTop = el.transcript.scrollHeight;
-        }
-      };
-      recognizer.onerror = () => { setState('err'); listening=false; };
-      recognizer.onend = async () => {
-        listening=false;
-        const live = document.getElementById('liveText');
-        const userText = (live?.textContent || '').trim();
-        if(!userText){ setState('idle'); return; }
-        if(live){ live.removeAttribute('id'); live.parentElement?.removeAttribute?.('data-live'); }
-        line('Ty', userText); setState('think');
-        try{
-          const reply = await askAssistantText(userText);
-          line('Asystent', reply||'[brak odpowiedzi]');
-          speak(reply);
-          setState('idle');
-        }catch(e){ line('Asystent', 'Błąd API: ' + e.message); setState('err'); }
-      };
-      recognizer.start();
-      return true;
-    }
-
-    async function ensureStream(){
-      if(media) return media;
-      media = await navigator.mediaDevices.getUserMedia({ audio:true });
-      return media;
-    }
-    function stopRec(){
-      if(recorder && recActive){ recorder.stop(); recActive=false; }
-    }
-    async function startRec(){
-      try{
-        const stream = await ensureStream();
-        chunks = [];
-        recorder = new MediaRecorder(stream, { mimeType: 'audio/webm' });
-        recorder.ondataavailable = (e)=>{ if(e.data?.size) chunks.push(e.data); };
-        recorder.onstop = onStopSend;
-        recorder.start(); recActive=true; setState('listen');
-        setTimeout(()=>{ if(recActive) stopRec(); }, 4500); // auto-stop
-      }catch(e){ line('Asystent','Brak dostępu do mikrofonu.'); setState('err'); }
-    }
-    async function onStopSend(){
-      try{
-        const blob = new Blob(chunks, { type:'audio/webm' });
-        if(!blob.size){ setState('idle'); return; }
-        setState('think');
-        const r = await fetch(URLS.asr, { method:'POST', headers:{'Content-Type':'audio/webm'}, body: blob });
-        if(!r.ok){ const t = await r.text(); throw new Error('ASR ' + r.status + ' ' + t); }
-        const j = await r.json();
-        const text = (j?.text||'').trim();
-        if(text){ line('Ty', text); const reply = await askAssistantText(text); line('Asystent', reply||'[brak]'); speak(reply); }
-        else { line('Asystent','Nie rozpoznano mowy.'); }
-        setState('idle');
-      }catch(e){ line('Asystent','ASR błąd: ' + e.message); setState('err'); }
-    }
-
-    /* ===========================
-       ASSISTANT TEXT
-       =========================== */
-    async function askAssistantText(text){
-      const r = await fetch(URLS.chat, {
-        method:'POST', headers:{'Content-Type':'application/json'},
-        body: JSON.stringify({ text })
-      });
-      if(!r.ok){ const t = await r.text().catch(()=>r.statusText); throw new Error(t||('HTTP '+r.status)); }
-      const j = await r.json();
-      return j.assistantText || j.reply || j.answer || '';
-    }
-
-    /* ===========================
-       WIRING
-       =========================== */
-    function toggleVoice(){
-      // 1) Spróbuj web SpeechRecognition:
-      const ok = startSR();
-      if(ok) return;
-      // 2) Fallback na nagranie chunku i /api/asr:
-      if(!recActive) startRec(); else stopRec();
-    }
-
-    el.logo.addEventListener('click', toggleVoice);
-    el.logo.addEventListener('keydown', (e)=>{ if(e.key==='Enter'||e.key===' ') toggleVoice(); });
-
-    el.pills[0].addEventListener('click', async ()=>{ const q='Chcę zamówić pizzę pepperoni na adres domowy. Jakie są opcje?'; line('Ty', q); setState('think'); try{ const a=await askAssistantText(q); line('Asystent', a); speak(a); }catch(e){ line('Asystent','Błąd: '+e.message); } setState('idle'); });
-    el.pills[1].addEventListener('click', async ()=>{ const q='Potrzebuję taksówki spod domu do centrum. Jaki czas i koszt?'; line('Ty', q); setState('think'); try{ const a=await askAssistantText(q); line('Asystent', a); speak(a); }catch(e){ line('Asystent','Błąd: '+e.message); } setState('idle'); });
-    el.pills[2].addEventListener('click', async ()=>{ const q='Szukam hotelu na jedną noc w pobliżu, najlepiej 4*. Co polecasz?'; line('Ty', q); setState('think'); try{ const a=await askAssistantText(q); line('Asystent', a); speak(a); }catch(e){ line('Asystent','Błąd: '+e.message); } setState('idle'); });
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
