--- a/index.html
+++ b/index.html
@@ -2,40 +2,231 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FREEFLOW</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>FreeFlow • Voice to order</title>
+  <link rel="icon" href="./Freeflow-logo.png" />
+  <style>
+    :root{
+      --bg:#0b0f14; --panel:#121821; --panel2:#16202c;
+      --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00;
+      --glow:#ff7a00aa; --ring:#2a3545;
+    }
+    html,body{height:100%}
+    body{
+      margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
+      background: radial-gradient(1200px 800px at 50% -20%, #182131 0%, #0d141d 50%, var(--bg) 100%);
+      color:var(--text);
+    }
+
+    /* ===== efekty glass + neon ===== */
+    .glass{
+      background: rgba(255,255,255,.08);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:15px;
+      box-shadow: 0 4px 30px rgba(0,0,0,.25);
+    }
+    .glow{
+      box-shadow:
+        0 0 10px rgba(0,255,255,.15),
+        0 0 20px rgba(0,255,255,.12),
+        0 0 30px rgba(0,255,255,.08);
+      transition: box-shadow .3s ease, transform .15s ease;
+    }
+    .glow:hover{
+      box-shadow:
+        0 0 15px rgba(0,255,255,.25),
+        0 0 30px rgba(0,255,255,.18),
+        0 0 45px rgba(0,255,255,.12);
+      transform: translateY(-1px);
+    }
+    /* ================================= */
+
+    /* top bar */
+    .topbar{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:16px 18px; position:sticky; top:0; z-index:20;
+      background: linear-gradient(180deg, rgba(13,20,29,.9), rgba(13,20,29,.65), rgba(13,20,29,0));
+      backdrop-filter: blur(6px);
+    }
+    .brand{ display:flex; align-items:center; gap:10px; font-weight:800; font-size:26px; }
+    .brand img{width:36px; height:36px; border-radius:8px}
+    .brand .accent{color:var(--brand)}
+    .claim{font-size:12px; color:var(--muted); margin-top:-6px}
+    .actions{display:flex; gap:10px}
+    .iconbtn{
+      width:44px; height:44px; border-radius:12px; border:1px solid #243044;
+      background: linear-gradient(180deg,#17202d,#111722);
+      color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
+      box-shadow: 0 4px 20px rgba(0,0,0,.35);
+    }
+    .badge{
+      position:absolute; margin-top:-28px; margin-left:26px;
+      background:var(--brand); color:#111; font-weight:700; font-size:12px;
+      width:22px; height:22px; border-radius:50%; display:grid; place-items:center;
+      box-shadow:0 0 16px var(--glow);
+    }
+
+    /* hero */
+    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 40px}
+    h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
+    .sub{color:var(--muted); margin-bottom:18px}
+
+    .hero{
+      margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
+      border-radius:50%;
+      background: radial-gradient(60% 60% at 50% 45%, #1f2937 0%, #0f1722 55%, #0b1018 100%);
+      border:1px solid var(--ring);
+      display:grid; place-items:center; position:relative;
+      box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
+    }
+    .hero .logo{
+      width:76%; max-width:520px; filter: drop-shadow(0 8px 26px rgba(0,0,0,.45));
+      user-select:none; pointer-events:none;
+    }
+    #micBtn{
+      position:absolute; bottom:9%; left:50%; transform: translateX(-50%);
+      padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid #2a3548;
+      background: rgba(20,27,38,.8); color:var(--text); font-size:22px;
+      display:flex; align-items:center; gap:10px;
+      box-shadow: 0 12px 40px rgba(0,0,0,.45), 0 0 0 0 rgba(0,255,128,0);
+      transition: box-shadow .25s ease, transform .15s ease;
+    }
+    #micBtn:hover{ transform: translateX(-50%) scale(1.02); }
+    #micBtn.recording{
+      animation: pulse 1.6s infinite;
+      border-color:#22d37f77;
+      box-shadow: 0 12px 40px rgba(0,0,0,.55), 0 0 26px #22d37f44;
+    }
+    @keyframes pulse{
+      0%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,.55); }
+      70%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 16px rgba(34,211,127,0); }
+      100%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,0); }
+    }
+
+    /* transcript bubble */
+    .bubble{
+      margin:18px auto 0; max-width:900px; padding:18px 16px; min-height:40px;
+      background: linear-gradient(180deg,#111824,#0e1520); border:1px solid #243044;
+      border-radius:18px; color:var(--text); font-size:18px;
+      box-shadow: inset 0 0 24px #0008, 0 8px 40px #000a;
+    }
+
+    /* bottom buttons (równe) */
+    .bottom-buttons{
+      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:16px;
+    }
+    .bottom-buttons button{
+      flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
+      display:flex; align-items:center; justify-content:center; gap:10px;
+      font-size:18px; border-radius:14px;
+      background: linear-gradient(180deg,#161e2a,#101723);
+      color:#e8eefb; border:1px solid #243044; cursor:pointer;
+      box-shadow: 0 10px 32px rgba(0,0,0,.35);
+      transition: transform .15s ease, background .2s ease;
+    }
+    .bottom-buttons button:hover{ transform: translateY(-1px); background: #182233; }
+    .bottom-buttons .primary{ outline:2px solid #ff7a00aa; box-shadow:0 0 20px #ff7a0033 inset, 0 10px 32px #000; }
+
+    /* glass + glow aplikacja na wybrane elementy */
+    .iconbtn.glass.glow{ border-color:rgba(255,255,255,.16); }
+    #micBtn.glass.glow{ background:rgba(20,27,38,.55); }
+
+    @media (max-width:480px){
+      h1{font-size:36px}
+      .bottom-buttons button{height:52px; font-size:16px; min-width:110px}
+      #micBtn{font-size:20px}
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Topbar -->
   <header class="topbar">
-    <div class="brand">FREEFLOW</div>
+    <div>
+      <div class="brand">
+        <img src="./Freeflow-logo.png" alt="logo"/>
+        <span class="accent">Free</span>Flow
+      </div>
+      <div class="claim">Voice to order</div>
+    </div>
     <div class="actions">
-      <button class="icon-btn" id="menuBtn" aria-label="Menu">☰</button>
-      <button class="icon-btn" id="cartBtn" aria-label="Koszyk">🛒<span id="cartCount">0</span></button>
+      <button class="iconbtn glass glow" id="menuBtn" aria-label="Menu">☰</button>
+      <div style="position:relative">
+        <button class="iconbtn glass glow" id="cartBtn" aria-label="Koszyk">🛒</button>
+        <div class="badge" id="cartBadge">0</div>
+      </div>
     </div>
   </header>
 
-  <main class="stage">
-    <!-- Neon pulsing drop with logo -->
-    <button id="micBtn" class="logo-wrap" aria-label="Nagraj komunikat">
-      <span class="neon-ring"></span>
-      <img class="logo" src="assets/logo.png" alt="FreeFlow logo" />
-    </button>
+  <main class="wrap">
+    <h1>Złóż zamówienie</h1>
+    <div class="sub">Taxi, posiłek, a może nocleg?</div>
 
-    <!-- Status / transcript box -->
-    <section id="console" class="console" aria-live="polite"></section>
+    <!-- Hero z logo + mic -->
+    <section class="hero">
+      <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
+      <button id="micBtn" type="button" class="glass glow">🎤 Dotknij logo i mów…</button>
+    </section>
 
-    <!-- Quick intents -->
-    <nav class="actions-row">
-      <button class="pill" data-intent="Jedzenie">🍽️ Jedzenie</button>
-      <button class="pill" data-intent="Taxi">🚖 Taxi</button>
-      <button class="pill" data-intent="Hotel">🏨 Hotel</button>
-    </nav>
+    <!-- Transkrypcja / odpowiedzi -->
+    <div id="transcript" class="bubble glass glow">Transkrypcja pojawi się tutaj…</div>
+
+    <!-- Przyciski skrótów -->
+    <div class="bottom-buttons" style="margin-bottom:36px">
+      <button class="primary glass glow" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
+      <button class="glass glow" data-quick="Taxi">🚕 <span>Taxi</span></button>
+      <button class="glass glow" data-quick="Hotel">🏠 <span>Hotel</span></button>
+    </div>
   </main>
 
-  <script src="app.js"></script>
+  <!-- Audio do TTS -->
+  <audio id="ttsPlayer" preload="auto"></audio>
+
+  <!-- Logika asystenta -->
+  <script src="./freeflow-assistant.js"></script>
+
+  <!-- Mini logika UI (niemodułowa) -->
+  <script>
+    const badgeEl = document.getElementById('cartBadge');
+    const cartBtn = document.getElementById('cartBtn');
+    cartBtn.addEventListener('click',()=> alert('Koszyk (coming soon)'));
+    document.getElementById('menuBtn').addEventListener('click',()=> alert('Menu (coming soon)'));
+
+    // quick actions → wysyłamy gotowe prompt’y do asystenta
+    document.querySelectorAll('[data-quick]').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const t = btn.dataset.quick;
+        if (window.sendToAssistant) {
+          window.sendToAssistant(`Zamówienie: ${t}. Pomóż dokończyć szczegóły.`);
+        }
+      });
+    });
+  </script>
+
+  <!-- Koszyk (moduł) -->
+  <script type="module">
+    import { addToCart, getCart, cartCount, clearCart } from './cart.js';
+
+    const badge = document.getElementById('cartBadge');
+    function renderBadge(){ badge.textContent = cartCount(); }
+    renderBadge();
+    window.addEventListener('cart:update', renderBadge);
+
+    document.querySelector('[data-quick="Jedzenie"]')
+      .addEventListener('click', ()=> addToCart({type:'food', name:'Zestaw dnia'}));
+    document.querySelector('[data-quick="Taxi"]')
+      .addEventListener('click', ()=> addToCart({type:'taxi', name:'Kurs standard'}));
+    document.querySelector('[data-quick="Hotel"]')
+      .addEventListener('click', ()=> addToCart({type:'hotel', name:'Pokój 1 noc'}));
+
+    document.getElementById('cartBtn').addEventListener('click', ()=>{
+      const items = getCart();
+      alert(items.length ? items.map(i=>`• ${i.type} – ${i.name}`).join('\n') : 'Koszyk jest pusty');
+    });
+
+    window.FreeFlowCart = { addToCart, clearCart, getCart };
+  </script>
 </body>
 </html>
