--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>FreeFlow • Voice to order</title>
-  <link rel="icon" href="./Freeflow-logo.png" />
+  <link rel="icon" href="./assets/logo.png" />
   <style>
     :root{
       --bg:#0b0f14; --panel:#121821; --panel2:#16202c;
@@ -14,7 +14,10 @@
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
-      background: radial-gradient(1200px 800px at 50% -20%, #182131 0%, #0d141d 50%, var(--bg) 100%);
+      /* TŁO: obraz z assets + delikatny gradient przyciemnienia dla czytelności */
+      background:
+        radial-gradient(1200px 800px at 50% -20%, rgba(24,33,49,.8) 0%, rgba(13,20,29,.85) 50%, rgba(11,15,20,.95) 100%),
+        url("./assets/Background.png") center / cover no-repeat fixed;
       color:var(--text);
     }
 
@@ -68,15 +71,17 @@
       box-shadow:0 0 16px var(--glow);
     }
 
-    /* hero */
+    /* layout */
     .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 40px}
     h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
     .sub{color:var(--muted); margin-bottom:18px}
 
+    /* hero */
     .hero{
       margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
       border-radius:50%;
-      background: radial-gradient(60% 60% at 50% 45%, #1f2937 0%, #0f1722 55%, #0b1018 100%);
+      background:
+        radial-gradient(60% 60% at 50% 45%, rgba(31,41,55,.9) 0%, rgba(15,23,34,.9) 55%, rgba(11,16,24,.95) 100%);
       border:1px solid var(--ring);
       display:grid; place-items:center; position:relative;
       box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
@@ -146,7 +151,7 @@
   <header class="topbar">
     <div>
       <div class="brand">
-        <img src="./Freeflow-logo.png" alt="logo"/>
+        <img src="./assets/logo.png" alt="logo"/>
         <span class="accent">Free</span>Flow
       </div>
       <div class="claim">Voice to order</div>
@@ -166,7 +171,7 @@
 
     <!-- Hero z logo + mic -->
     <section class="hero">
-      <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
+      <img class="logo" src="./assets/logo.png" alt="FreeFlow" />
       <button id="micBtn" type="button" class="glass glow">🎤 Dotknij logo i mów…</button>
     </section>
 
